load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test_dist_info",
    srcs = ["test_dist_info.py"],
    data = ["pex-listing.txt"],
    deps = [
        "//req_compile/metadata:dist_info",
        "//tests:conftest",
        "@req_compile_deps//pytest",
    ],
)

py_test(
    name = "test_source_metadata",
    srcs = ["test_source_metadata.py"],
    deps = [
        "//req_compile:errors",
        "//req_compile/metadata:dist_info",
        "//req_compile/metadata:extractor",
        "//req_compile/metadata:source",
        "//tests:conftest",  # keep: pytest fixtures
        "@req_compile_deps//pytest",
    ],
)
