load("@bazel_skylib//lib:selects.bzl", "selects")

config_setting(
    name = "linux_aarch64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
    visibility = ["//visibility:public"],
)

selects.config_setting_group(
    name = "linux_aarch_any",
    match_any = [
        ":linux_aarch32",
        ":linux_armv7",
        ":linux_armv7-m",
        ":linux_armv7e-m",
        ":linux_armv7e-mf",
        ":linux_armv7k",
        ":linux_aarch64",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "linux_aarch32",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch32",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "linux_armv7",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:armv7",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "linux_armv7-m",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:armv7-m",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "linux_armv7e-m",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:armv7e-m",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "linux_armv7e-mf",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:armv7e-mf",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "linux_armv7k",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:armv7k",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "macos_aarch64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "macos_x86_64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "windows_x86_64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)
