load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:local.bzl", "local_repository")

http_archive(
    name = "rules_python",
    sha256 = "be04b635c7be4604be1ef20542e9870af3c49778ce841ee2d92fcb42f9d9516a",
    strip_prefix = "rules_python-0.35.0",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.35.0/rules_python-0.35.0.tar.gz",
)

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

python_register_toolchains(
    name = "python_3_11",
    python_version = "3.11",
)

local_repository(
    name = "rules_req_compile",
    path = "../../..",
)

load("@rules_req_compile//:repositories.bzl", "req_compile_dependencies")

req_compile_dependencies()

load("@rules_req_compile//:repositories_transitive.bzl", "req_compile_transitive_dependencies")

req_compile_transitive_dependencies()

load("@rules_req_compile//:defs.bzl", "py_requirements_repository")

py_requirements_repository(
    name = "pip_deps",
    requirements_locks = {
        "//:requirements.linux.txt": "@platforms//os:linux",
        "//:requirements.macos.txt": "@platforms//os:macos",
        "//:requirements.windows.txt": "@platforms//os:windows",
    },
)

load("@pip_deps//:defs.bzl", "repositories")

repositories()
