load("@rules_python//python:defs.bzl", "py_binary")
load("//:defs.bzl", "py_reqs_compiler", "py_reqs_solution_test")

exports_files(["find_links.py"])

filegroup(
    name = "requirements",
    srcs = ["requirements.in"],
    data = ["wheeldir/.gitkeep"] + glob(
        include = ["wheeldir/*.whl"],
        allow_empty = True,
    ),
)

py_binary(
    name = "compiler_wrapper",
    srcs = ["compiler_wrapper.py"],
)

py_reqs_compiler(
    name = "requirements.update",
    custom_compile_command = "bazel run //private/tests/find_links:compiler_wrapper",
    requirements_in = ":requirements",
    requirements_txt = "requirements.txt",
)

py_reqs_solution_test(
    name = "requirements_test",
    compiler = ":requirements.update",
)

test_suite(
    name = "find_links",
    tests = ["@req_compile_find_links_test//:find_links"],
)
