load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_python//python:defs.bzl", "py_binary", "py_test")
load("//:defs.bzl", "py_reqs_compiler", "py_reqs_solution_test")

# gazelle:resolve py pyspark @req_compile_test_find_links//:pyspark

exports_files(["find_links.py"])

filegroup(
    name = "requirements",
    srcs = ["requirements.in"],
    data = ["wheeldir/.gitkeep"] + glob(
        include = ["wheeldir/*.whl"],
        allow_empty = True,
    ),
)

py_binary(
    name = "compiler_wrapper",
    srcs = ["compiler_wrapper.py"],
    visibility = ["//:__subpackages__"],
)

py_reqs_compiler(
    name = "requirements.update",
    custom_compile_command = "bazel run //private/tests/find_links:compiler_wrapper",
    requirements_in = ":requirements",
    requirements_txt = "requirements.txt",
)

py_reqs_solution_test(
    name = "requirements_test",
    compiler = ":requirements.update",
)

bzl_library(
    name = "extension",
    srcs = ["extension.bzl"],
    visibility = ["//:__subpackages__"],
    deps = ["//extensions:python"],
)

bzl_library(
    name = "find_links_test_repo",
    srcs = ["find_links_test_repo.bzl"],
    visibility = ["//:__subpackages__"],
    deps = ["//private:whl_repo"],
)

py_test(
    name = "find_links_test",
    srcs = ["find_links_test.py"],
    deps = ["@req_compile_test_find_links//:pyspark"],
)
