load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_python//python:defs.bzl", "py_binary", "py_test")
load("//:defs.bzl", "py_reqs_compiler", "py_reqs_solution_test")

exports_files(["find_links.py"])

filegroup(
    name = "requirements",
    srcs = ["requirements.in"],
    data = ["wheeldir/.gitkeep"] + glob(
        include = ["wheeldir/*.whl"],
        allow_empty = True,
    ),
)

py_binary(
    name = "compiler_wrapper",
    srcs = ["compiler_wrapper.py"],
)

py_reqs_compiler(
    name = "requirements.update",
    custom_compile_command = "bazel run //private/tests/find_links:compiler_wrapper",
    requirements_in = ":requirements",
    requirements_txt = "requirements.txt",
)

py_reqs_solution_test(
    name = "requirements_test",
    compiler = ":requirements.update",
)

py_test(
    name = "find_links",
    srcs = ["//private/tests/find_links:find_links.py"],
    main = "//private/tests/find_links:find_links.py",
    deps = [
        "@req_compile_test_find_links//pyspark",
    ],
)

bzl_library(
    name = "extension",
    srcs = ["extension.bzl"],
    visibility = ["//:__subpackages__"],
    deps = ["//extensions:python"],
)

bzl_library(
    name = "find_links_test_repo",
    srcs = ["find_links_test_repo.bzl"],
    visibility = ["//:__subpackages__"],
    deps = ["//private:whl_repo"],
)
